--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "node server.js"
   },
   "dependencies": {
+    "botbuilder": "^4.14.1",
+    "express": "^4.17.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
