--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "node server.js"
+    "server": "nodemon server.ts"
   },
   "dependencies": {
     "botbuilder": "^4.14.1",
     "express": "^4.17.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.9.6",
     "@types/react": "17.0.24",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "nodemon": "^2.0.13",
     "typescript": "4.4.3"
   }
 }
