--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "botbuilder": "^4.14.1",
     "express": "^4.17.1",
+    "firebase-admin": "^9.11.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^1.0.1",
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
