--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "nodemon server.ts"
+    "server": "nodemon -e ts,js --exec ts-node -r tsconfig-paths/register ./server.ts"
   },
   "dependencies": {
     "botbuilder": "^4.14.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "next": "11.1.2",
     "react": "17.0.2",
@@ -24,6 +25,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "nodemon": "^2.0.13",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "4.4.3"
   }
 }
