--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.0.1",
+    "telegraf": "^4.4.2",
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
