--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "next build",
     "start": "npm link typescript && npm link tsconfig-paths && ts-node -r tsconfig-paths/register ./server.ts",
     "lint": "next lint",
-    "server": "nodemon -e ts,js --exec ts-node -r tsconfig-paths/register ./server.ts"
+    "server": "nodemon -e ts,js --exec ts-node -r tsconfig-paths/register ./server.ts",
+    "lt": "lt --port 3000"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.11.1",
+    "localtunnel": "^2.0.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
