--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lt": "lt --port 3000 --subdomain hackzurich2021bot"
   },
   "dependencies": {
+    "botbuilder": "^4.14.1",
+    "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.11.1",
@@ -18,6 +20,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-swipeable": "^6.2.0",
     "swr": "^1.0.1",
     "telegraf": "^4.4.2",
     "ts-node": "^10.2.1"
