--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-swipeable": "^6.2.0",
     "swr": "^1.0.1",
     "telegraf": "^4.4.2",
+    "telegraf-throttler": "^0.6.0",
     "ts-node": "^10.2.1"
   },
   "devDependencies": {
