--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^9.11.1",
     "localtunnel": "^2.0.2",
     "next": "11.1.2",
+    "ngrok": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-swipeable": "^6.2.0",
